// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: Step wrapper 1`] = `
<Step
  finished={false}
  onOpen={[MockFunction]}
  open={true}
  renderForm={[Function]}
  stepNumber={1}
  stepTitle="onboarding.tutorial.with.jenkins.multi_branch_pipeline.title"
/>
`;

exports[`should render correctly: content for bitbucket 1`] = `
<div
  className="boxed-group-inner"
>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.multi_branch_pipeline.intro
  </p>
  <ol
    className="list-styled"
  >
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "new_item",
            "type",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step1"
      />
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "tab",
            "source",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket"
      />
      <ul
        className="list-styled list-alpha"
      >
        <React.Fragment>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.server"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.creds"
            />
          </li>
          <li>
            <LabelValuePair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.owner"
              value="PROJECT_KEY"
            />
          </li>
          <li>
            <LabelValuePair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.repo"
              value="repo-slug"
            />
          </li>
        </React.Fragment>
        <li>
          <strong>
            onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.label
            :
          </strong>
          <ol
            className="list-styled list-roman little-spacer-top abs-width-600"
          >
            <li>
              <LabelActionPair
                translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.branches_prs"
              />
            </li>
            <li>
              <LabelActionPair
                translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.discover_prs"
              />
            </li>
            <li>
              <strong>
                onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.label
                :
              </strong>
              <ul
                className="list-styled little-spacer-top"
              >
                <li>
                  <SentenceWithHighlights
                    highlightKeys={
                      [
                        "add",
                        "ref_spec",
                      ]
                    }
                    translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.add_behaviour"
                  />
                </li>
                <li>
                  <SentenceWithHighlights
                    highlightKeys={
                      [
                        "ref_spec",
                      ]
                    }
                    translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.set_pr_ref_specs"
                  />
                  <CodeSnippet
                    isOneLine={true}
                    snippet="+refs/heads/*:refs/remotes/@{remote}/*"
                  />
                </li>
              </ul>
            </li>
          </ol>
        </li>
      </ul>
      <p
        className="big-spacer-left padder-left"
      >
        onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.leave_defaults
      </p>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "tab",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3"
      />
      <ul
        className="list-styled list-alpha"
      >
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.mode"
          />
        </li>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.script_path"
          />
        </li>
      </ul>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "save",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step4"
      />
    </li>
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    continue
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly: content for bitbucket cloud 1`] = `
<div
  className="boxed-group-inner"
>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.multi_branch_pipeline.intro
  </p>
  <ol
    className="list-styled"
  >
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "new_item",
            "type",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step1"
      />
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "tab",
            "source",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud"
      />
      <ul
        className="list-styled list-alpha"
      >
        <React.Fragment>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.server"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.creds"
            />
          </li>
          <li>
            <LabelValuePair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.owner"
              value="workspaceId"
            />
          </li>
          <li>
            <LabelValuePair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.repo"
              value="repo-slug"
            />
          </li>
        </React.Fragment>
        <li>
          <strong>
            onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.label
            :
          </strong>
          <ol
            className="list-styled list-roman little-spacer-top abs-width-600"
          >
            <li>
              <LabelActionPair
                translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.branches_prs"
              />
            </li>
            <li>
              <LabelActionPair
                translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.discover_prs"
              />
            </li>
            <li>
              <strong>
                onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.label
                :
              </strong>
              <ul
                className="list-styled little-spacer-top"
              >
                <li>
                  <SentenceWithHighlights
                    highlightKeys={
                      [
                        "add",
                        "ref_spec",
                      ]
                    }
                    translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.add_behaviour"
                  />
                </li>
                <li>
                  <SentenceWithHighlights
                    highlightKeys={
                      [
                        "ref_spec",
                      ]
                    }
                    translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.set_pr_ref_specs"
                  />
                  <CodeSnippet
                    isOneLine={true}
                    snippet="+refs/heads/*:refs/remotes/@{remote}/*"
                  />
                </li>
              </ul>
            </li>
          </ol>
        </li>
      </ul>
      <p
        className="big-spacer-left padder-left"
      >
        onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.leave_defaults
      </p>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "tab",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3"
      />
      <ul
        className="list-styled list-alpha"
      >
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.mode"
          />
        </li>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.script_path"
          />
        </li>
      </ul>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "save",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step4"
      />
    </li>
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    continue
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly: content for bitbucket cloud, no binding 1`] = `
<div
  className="boxed-group-inner"
>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.multi_branch_pipeline.intro
  </p>
  <ol
    className="list-styled"
  >
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "new_item",
            "type",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step1"
      />
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "tab",
            "source",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud"
      />
      <ul
        className="list-styled list-alpha"
      >
        <React.Fragment>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.server"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.creds"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.owner"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.repo"
            />
          </li>
        </React.Fragment>
        <li>
          <strong>
            onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.label
            :
          </strong>
          <ol
            className="list-styled list-roman little-spacer-top abs-width-600"
          >
            <li>
              <LabelActionPair
                translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.branches_prs"
              />
            </li>
            <li>
              <LabelActionPair
                translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.discover_prs"
              />
            </li>
            <li>
              <strong>
                onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.label
                :
              </strong>
              <ul
                className="list-styled little-spacer-top"
              >
                <li>
                  <SentenceWithHighlights
                    highlightKeys={
                      [
                        "add",
                        "ref_spec",
                      ]
                    }
                    translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.add_behaviour"
                  />
                </li>
                <li>
                  <SentenceWithHighlights
                    highlightKeys={
                      [
                        "ref_spec",
                      ]
                    }
                    translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.set_pr_ref_specs"
                  />
                  <CodeSnippet
                    isOneLine={true}
                    snippet="+refs/heads/*:refs/remotes/@{remote}/*"
                  />
                </li>
              </ul>
            </li>
          </ol>
        </li>
      </ul>
      <p
        className="big-spacer-left padder-left"
      >
        onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.leave_defaults
      </p>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "tab",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3"
      />
      <ul
        className="list-styled list-alpha"
      >
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.mode"
          />
        </li>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.script_path"
          />
        </li>
      </ul>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "save",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step4"
      />
    </li>
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    continue
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly: content for bitbucket, no binding 1`] = `
<div
  className="boxed-group-inner"
>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.multi_branch_pipeline.intro
  </p>
  <ol
    className="list-styled"
  >
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "new_item",
            "type",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step1"
      />
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "tab",
            "source",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket"
      />
      <ul
        className="list-styled list-alpha"
      >
        <React.Fragment>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.server"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.creds"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.owner"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.repo"
            />
          </li>
        </React.Fragment>
        <li>
          <strong>
            onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.label
            :
          </strong>
          <ol
            className="list-styled list-roman little-spacer-top abs-width-600"
          >
            <li>
              <LabelActionPair
                translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.branches_prs"
              />
            </li>
            <li>
              <LabelActionPair
                translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.discover_prs"
              />
            </li>
            <li>
              <strong>
                onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.label
                :
              </strong>
              <ul
                className="list-styled little-spacer-top"
              >
                <li>
                  <SentenceWithHighlights
                    highlightKeys={
                      [
                        "add",
                        "ref_spec",
                      ]
                    }
                    translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.add_behaviour"
                  />
                </li>
                <li>
                  <SentenceWithHighlights
                    highlightKeys={
                      [
                        "ref_spec",
                      ]
                    }
                    translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.set_pr_ref_specs"
                  />
                  <CodeSnippet
                    isOneLine={true}
                    snippet="+refs/heads/*:refs/remotes/@{remote}/*"
                  />
                </li>
              </ul>
            </li>
          </ol>
        </li>
      </ul>
      <p
        className="big-spacer-left padder-left"
      >
        onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.leave_defaults
      </p>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "tab",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3"
      />
      <ul
        className="list-styled list-alpha"
      >
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.mode"
          />
        </li>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.script_path"
          />
        </li>
      </ul>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "save",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step4"
      />
    </li>
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    continue
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly: content for github 1`] = `
<div
  className="boxed-group-inner"
>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.multi_branch_pipeline.intro
  </p>
  <ol
    className="list-styled"
  >
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "new_item",
            "type",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step1"
      />
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "tab",
            "source",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.github"
      />
      <ul
        className="list-styled list-alpha"
      >
        <React.Fragment>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.github.creds"
            />
          </li>
          <li>
            <LabelValuePair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.github.repo_url"
              value="https://github.com/PROJECT_KEY"
            />
          </li>
        </React.Fragment>
        <li>
          <strong>
            onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.label
            :
          </strong>
          <ol
            className="list-styled list-roman little-spacer-top abs-width-600"
          >
            <li>
              <LabelActionPair
                translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.branches_prs"
              />
            </li>
            <li>
              <LabelActionPair
                translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.discover_prs"
              />
            </li>
            <li>
              <strong>
                onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.label
                :
              </strong>
              <ul
                className="list-styled little-spacer-top"
              >
                <li>
                  <SentenceWithHighlights
                    highlightKeys={
                      [
                        "add",
                        "ref_spec",
                      ]
                    }
                    translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.add_behaviour"
                  />
                </li>
                <li>
                  <SentenceWithHighlights
                    highlightKeys={
                      [
                        "ref_spec",
                      ]
                    }
                    translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.set_pr_ref_specs"
                  />
                  <CodeSnippet
                    isOneLine={true}
                    snippet="+refs/heads/*:refs/remotes/@{remote}/*"
                  />
                </li>
              </ul>
            </li>
          </ol>
        </li>
      </ul>
      <p
        className="big-spacer-left padder-left"
      >
        onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.leave_defaults
      </p>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "tab",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3"
      />
      <ul
        className="list-styled list-alpha"
      >
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.mode"
          />
        </li>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.script_path"
          />
        </li>
      </ul>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "save",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step4"
      />
    </li>
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    continue
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly: content for github, no binding 1`] = `
<div
  className="boxed-group-inner"
>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.multi_branch_pipeline.intro
  </p>
  <ol
    className="list-styled"
  >
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "new_item",
            "type",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step1"
      />
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "tab",
            "source",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.github"
      />
      <ul
        className="list-styled list-alpha"
      >
        <React.Fragment>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.github.creds"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.github.repo_url"
            />
          </li>
        </React.Fragment>
        <li>
          <strong>
            onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.label
            :
          </strong>
          <ol
            className="list-styled list-roman little-spacer-top abs-width-600"
          >
            <li>
              <LabelActionPair
                translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.branches_prs"
              />
            </li>
            <li>
              <LabelActionPair
                translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.discover_prs"
              />
            </li>
            <li>
              <strong>
                onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.label
                :
              </strong>
              <ul
                className="list-styled little-spacer-top"
              >
                <li>
                  <SentenceWithHighlights
                    highlightKeys={
                      [
                        "add",
                        "ref_spec",
                      ]
                    }
                    translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.add_behaviour"
                  />
                </li>
                <li>
                  <SentenceWithHighlights
                    highlightKeys={
                      [
                        "ref_spec",
                      ]
                    }
                    translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.set_pr_ref_specs"
                  />
                  <CodeSnippet
                    isOneLine={true}
                    snippet="+refs/heads/*:refs/remotes/@{remote}/*"
                  />
                </li>
              </ul>
            </li>
          </ol>
        </li>
      </ul>
      <p
        className="big-spacer-left padder-left"
      >
        onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.leave_defaults
      </p>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "tab",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3"
      />
      <ul
        className="list-styled list-alpha"
      >
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.mode"
          />
        </li>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.script_path"
          />
        </li>
      </ul>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "save",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step4"
      />
    </li>
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    continue
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly: content for gitlab 1`] = `
<div
  className="boxed-group-inner"
>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.multi_branch_pipeline.intro
  </p>
  <ol
    className="list-styled"
  >
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "new_item",
            "type",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step1"
      />
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "tab",
            "source",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.gitlab"
      />
      <ul
        className="list-styled list-alpha"
      >
        <React.Fragment>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.gitlab.creds"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.gitlab.owner"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.gitlab.repo"
            />
          </li>
        </React.Fragment>
        <li>
          <strong>
            onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.label
            :
          </strong>
          <ol
            className="list-styled list-roman little-spacer-top abs-width-600"
          >
            <li>
              <LabelActionPair
                translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.branches_mrs"
              />
            </li>
            <li>
              <LabelActionPair
                translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.discover_mrs"
              />
            </li>
            <li>
              <strong>
                onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.label
                :
              </strong>
              <ul
                className="list-styled little-spacer-top"
              >
                <li>
                  <SentenceWithHighlights
                    highlightKeys={
                      [
                        "add",
                        "ref_spec",
                      ]
                    }
                    translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.add_behaviour"
                  />
                </li>
                <li>
                  <SentenceWithHighlights
                    highlightKeys={
                      [
                        "ref_spec",
                      ]
                    }
                    translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.behaviors.ref_specs.set_mr_ref_specs"
                  />
                  <CodeSnippet
                    isOneLine={true}
                    snippet="+refs/heads/*:refs/remotes/@{remote}/*"
                  />
                </li>
              </ul>
            </li>
          </ol>
        </li>
      </ul>
      <p
        className="big-spacer-left padder-left"
      >
        onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.leave_defaults
      </p>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "tab",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3"
      />
      <ul
        className="list-styled list-alpha"
      >
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.mode"
          />
        </li>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.script_path"
          />
        </li>
      </ul>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          [
            "save",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step4"
      />
    </li>
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    continue
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;
